public static class TagsManager
{
    public static string VERTICAL_INPUT = "Vertical";
    public static string HORIZONTAL_INPUT = "Horizontal";

    public static string PLAYER_FLY_ANIMETION_PARAM = "Fly";
    public static string PLAYER_SHOOT_ANIMETION_PARAM = "Fire";
    public static string PLAYER_DESTROY_ANIMETION_PARAM = "Grounded";
}
